# primordium

./: .editorconfig  .gitignore  .markdownlint.yml  404.html  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_zh.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  KNOWN_ISSUES.md  LICENSE  README.md  README_zh.md  ROADMAP.md  ai-todo.md  architecture.html  build-docs.sh  changelog.html  changelog_zh.html  config.example.toml  introduction.html  manual.html  manual_zh.html  print.html  roadmap.html  searchindex.js  searchindex.json  testing.html  wiki-brain.html  wiki-ecosystem.html  wiki-genetics.html  wiki-history.html
.claude/: AGENTS.md
.claude/skills/rust-refactor-verify/: SKILL.md
.claude/skills/skill-creator/: SKILL.md
.github/workflows/: audit.yml  ci.yml  clippy.yml  deploy-docs.yml  release.yml
.husky/: commit-msg  pre-commit
.husky/hooks/: _helpers.sh  commit-msg  pre-commit  pre-push
.sisyphus/: ralph-loop.local.md
crates/primordium_core/: AGENTS.md  Cargo.toml
crates/primordium_core/benches/: brain_benchmarks.rs  spatial_hash_benchmarks.rs
crates/primordium_core/src/: blockchain.rs  brain.rs  config.rs  environment.rs  history.rs  influence.rs  interaction.rs  lib.rs  lifecycle.rs  lineage_registry.rs  lineage_tree.rs  metrics.rs  pathogen.rs  pheromone.rs  pressure.rs  snapshot.rs  sound.rs  spatial_hash.rs  terrain.rs
crates/primordium_core/src/brain/: crossover.rs  forward.rs  mod.rs  mutation.rs  topology.rs
crates/primordium_core/src/systems/: action.rs  audio.rs  biological.rs  civilization.rs  ecological.rs  environment.rs  history.rs  intel.rs  interaction.rs  mod.rs  social.rs  stats.rs
crates/primordium_core/src/systems/social/: legend.rs  mod.rs  rank.rs  reproduction.rs  specialization.rs  symbiosis.rs
crates/primordium_core/src/terrain/: disasters.rs  generation.rs  mod.rs  succession.rs
crates/primordium_data/: Cargo.toml
crates/primordium_data/src/: lib.rs
crates/primordium_data/src/data/: entity.rs  environment.rs  genotype.rs  mod.rs  terrain.rs
crates/primordium_io/: AGENTS.md  Cargo.toml
crates/primordium_io/src/: error.rs  history.rs  lib.rs  lineage.rs  persistence.rs  registry.rs  serialization.rs  storage.rs
crates/primordium_io/src/network/: flow_control.rs  mod.rs  quic.rs
crates/primordium_net/: Cargo.toml
crates/primordium_net/src/: lib.rs
crates/primordium_observer/: Cargo.toml
crates/primordium_observer/src/: lib.rs
crates/primordium_server/: Cargo.toml
crates/primordium_server/src/: main.rs
crates/primordium_tools/: Cargo.toml
crates/primordium_tui/: AGENTS.md  Cargo.toml
crates/primordium_tui/src/: lib.rs  renderer.rs
crates/primordium_tui/src/views/: ancestry.rs  archeology.rs  brain.rs  chronicle.rs  civilization.rs  help.rs  hof.rs  market.rs  mod.rs  overlays.rs  registry.rs  research.rs  sparklines.rs  status.rs
docs/: CHANGELOG_zh.md  MANUAL.md  MANUAL_zh.md  PROFILING.md  README_zh.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  introduction.md  testing.md
docs/plans/: 2026-02-04-engine-hardening.md  2026-02-13-phase68-v2-algorithmic-audio-design.md  2026-02-14-phase68-5-entity-coordinates-design.md  2026-02-14-phase68-6-stereo-audio-design.md  2026-02-24-phase69-ascii-raytracing-design.md  2026-02-26-phase70-galactic-federation-design.md
docs/tutorials/: GOD_MODE.md
docs/wiki/: BRAIN.md  ECOSYSTEM.md  GENETICS.md  HISTORY.md
examples/: audio_benchmark.rs
https:/github.com/pplmx/primordium/blob/main/.github/: CONTRIBUTING.html
src/: app.rs  lib.rs  main.rs
src/app/: audio.rs  events.rs  help.rs  input.rs  mod.rs  onboarding.rs  render.rs  shutdown.rs  state.rs
src/app/audio/: bio_music.rs  bio_music_algorithm.rs  engine.rs  entropy_synth.rs  event_sfx.rs  spatial.rs
src/app/input/: genetic_edit.rs  mod.rs  normal.rs  terrain_edit.rs
src/client/: manager.rs  registry.rs
src/model/: blockchain.rs  brain.rs  config.rs  entity.rs  environment.rs  history.rs  migration.rs  mod.rs  network.rs  observer.rs  persistence.rs  pheromone.rs  quadtree.rs  terrain.rs  world.rs
src/model/infra/: lineage_tree.rs  mod.rs  network.rs
src/model/state/: entity.rs  environment.rs  food.rs  interaction.rs  lineage_registry.rs  mod.rs  pathogen.rs  pheromone.rs  pressure.rs  snapshot.rs  sound.rs  terrain.rs
src/model/systems/: action.rs  action_tests.rs  biological.rs  civilization.rs  ecological.rs  environment.rs  history.rs  intel.rs  interaction.rs  mod.rs  social.rs  stats.rs
src/model/world/: finalize.rs  init.rs  logic.rs  mod.rs  state.rs  systems.rs  update.rs
src/model/world/systems/: action_parallel.rs  commands.rs  mod.rs  perception.rs
src/server/: main.rs
src/ui/: mod.rs  renderer.rs  tui.rs  web_renderer.rs
src/ui/tui/: mod.rs
src/ui/tui/views/: hof.rs  mod.rs
tests/: AGENTS.md  ancestry_tree.rs  archeology.rs  blockchain_timeout_retry.rs  bond_breaking.rs  brain_pbt.proptest-regressions  brain_pbt.rs  brain_properties.rs  civilization.rs  civilization_v2.rs  climate_shock.rs  concurrency_pressure.rs  cooperation.rs  determinism.rs  determinism_suite.rs  disasters.rs  ecology.rs  ecology_v2.rs  ecosystem_stability.rs  edge_cases.rs  environment_coupling.rs  environmental_succession.rs  evolution_validation.rs  genetic_bottlenecks.rs  genetic_flow.rs  genetic_ui.rs  language.rs  lifecycle.rs  lineage.rs  lineage_persistence.rs  macro_evolution.rs  metamorphosis.rs  migration_network.rs  migration_stress.rs  migration_validation.rs  multiverse_economy.rs  pathogens.rs  perf_gate.rs  performance_benchmark.rs  persistence.rs  (+25 more)
tests/common/: macros.rs  mod.rs
www/: index.html  index.js
