[package]
name = "primordium_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["primordium_data/std", "serde/std", "anyhow/std", "rayon"]

[dependencies]
primordium_data = { path = "../primordium_data" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
rayon = { version = "1.8", optional = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
anyhow = "1.0"
sha2 = "0.10"
toml = "0.8"
ratatui = "0.30"
atomic_float = "0.1"
hecs = "0.10"
flate2 = "1.0"
petgraph = "0.6"
chrono = "0.4"
rkyv = { version = "0.7", features = ["validation", "uuid"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["time"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "brain_benchmarks"
harness = false

[[bench]]
name = "spatial_hash_benchmarks"
harness = false
