[package]
name = "primordium_data"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["serde/std", "anyhow/std"]

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
rkyv = { version = "0.7", features = ["validation", "uuid", "std"] }
