[package]
name = "primordium_io"
version = "0.1.0"
edition = "2021"

[dependencies]
primordium_data = { path = "../primordium_data" }
primordium_core = { path = "../primordium_core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
flate2 = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = "0.4"
rkyv = { version = "0.7", features = ["validation", "uuid"] }
sha2 = "0.10"
hex = "0.4"
petgraph = "0.8.3"
rusqlite = { version = "0.31.0", features = ["bundled", "uuid", "blob"] }
quinn = { version = "0.10", features = ["rustls"] }
rustls = { version = "0.21", features = ["quic", "dangerous_configuration"] }
rcgen = "0.11"
