[package]
name = "primordium_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
primordium_net = { path = "../primordium_net" }
primordium_io = { path = "../primordium_io" }
primordium_core = { path = "../primordium_core" }
primordium_data = { path = "../primordium_data" }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
